# servier_test

./: README.md  pyproject.toml
config/: config.clinical_trials.toml  config.drugs.toml  config.pubmed.toml
datasets/: clinical_trials.csv  pubmed.csv
graph_output/: data.json
output/: data.json
sql_test/: test_sql.sql
src/: drug_reference.py  graph.py  graph_data.py  load_data.py  utiles.py
